k8s/ops/default/oauth2-proxy.yml
---
# Source: oauth2-proxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-0.13.0
    release: oauth2-proxy
    heritage: Tiller
  name: oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oauth2-proxy
    release: oauth2-proxy

---
# Source: oauth2-proxy/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-0.13.0
    heritage: Tiller
    release: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oauth2-proxy
      release: oauth2-proxy
  template:
    metadata:
      annotations:
        checksum/config: bf0cb9ca5ce3dcaa8cec57a52ecef0dc0f5ff5a9815bc2224e3f3298e23717fa
        checksum/config-emails: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret: aa3f7f0dd73d13db233ec5fa1f8f1698706487099d00bafd4192ae4815b338fb
        checksum/google-secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app: oauth2-proxy
        release: "oauth2-proxy"
    spec:
      containers:
        - name: oauth2-proxy
          image: "quay.io/pusher/oauth2_proxy:v3.2.0"
          imagePullPolicy: IfNotPresent
          args:
            - --http-address=0.0.0.0:4180
            - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 1
            successThreshold: 1
            periodSeconds: 10
          resources: {}

          volumeMounts:
            - mountPath: /etc/oauth2_proxy
              name: configmain
      volumes:
        - configMap:
            defaultMode: 420
            name: oauth2-proxy
          name: configmain
      tolerations: []

---
# Source: oauth2-proxy/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-0.13.0
    heritage: Tiller
    release: oauth2-proxy
  name: oauth2-proxy
  annotations:
    ingress.kubernetes.io/custom-request-headers: "l5d-dst-override: oauth2-proxy.default.svc.cluster.local:80"
    ingress.kubernetes.io/custom-response-headers: "l5d-remote-ip: || l5d-server-id:"
spec:
  rules:
    - host: auth.ops.issho-ni.co
      http:
        paths:
          - path: /
            backend:
              serviceName: oauth2-proxy
              servicePort: 80
